fixing fonts getting cut off in lmenu
closes issue #161

--- a/css/style.css
+++ b/css/style.css
@@ -349,7 +349,7 @@ a#inc_font, a#dec_font {
 	padding-top:6px;
 	padding-left:10px;
 }
-.sub-menu-heading, .sub-menu-heading a {
+.sub-menu-heading {
 	background-color:#005daa;
 	color:#fff;
 	padding:8px;
@@ -357,6 +357,11 @@ a#inc_font, a#dec_font {
 	font-size:20px;
 	/*margin-bottom:6px;*/
 	margin-top:16px;
+}
+.sub-menu-heading a {
+	color:#fff;
+	font-weight:bold;
+	font-size:20px;
 }
 .sub-menu-heading + ul {
 	margin-top:6px;
